# nautilus_mt5

./: .gitignore  README.md  main.py  pyproject.toml
MQL5/: README.md
MQL5/Experts/: MT5Ext.ex5  MT5Ext.mq5  exSpy Control panel MCM.mq5  exSpy.mq5
MQL5/Include/: multi-currency-events-manager.mqh
MQL5/Include/MT5Ext/: MT5Ext.mqh  common.mqh  rest-handlers.mqh  stream-handlers.mqh  utils.mqh
MQL5/Indicators/: Spy Control panel MCM.mq5  iSpy.mq5
MQL5/Indicators/iRSI USDx/: CSynchronizedBufferRSI.mqh  iRSI USDx.mqh
docs/: README.md
examples/: .env.example  connect_with_dockerized_terminal.py  connect_with_terminal.py  ea.py  get_account_info.py  metatrader5_sandbox.py  stream_data_with_ea.py
nautilus_mt5/: __init__.py  common.py  config.py  constants.py  data.py  data_types.py  execution.py  factories.py  providers.py  terminal.py
nautilus_mt5/client/: __init__.py  account.py  client.py  common.py  connection.py  market_data.py  order.py  sockets.py  symbol.py  timeframe_agg.py  types.py
nautilus_mt5/client/ea/: client.py  data_stream.pxd  errors.py  models.py
nautilus_mt5/client/metatrader5/: errors.py  metatrader5ext.py
nautilus_mt5/metatrader5/: MetaTrader5.py  __init__.py  config.py  ea_client.py  ea_sockets.py  errors.py  metatrader5ext.py  models.py  terminal.py  utils.py
nautilus_mt5/metatrader5/ea/: __init__.py  client.py  connection.py  data_stream.pyx  utils.py
nautilus_mt5/parsing/: execution.py  instruments.py
nautilus_mt5/sockets/: client.py
nautilus_mt5/websocket/: client.py
