[project]
name = "nautilus-mt5"
version = "0.1.0"
description = "Nautilus Trader MetaTrader5 Adapter"
readme = "README.md"
repository = "https://github.com/quantspub/nautilus_mt5"
authors = ["Quants Pub <quantspub@gmail.com>"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "cython<=3.1.0a1",
    "docker>=7.1.0",
    "nautilus-trader>=1.212.0",
    "numba>=0.61.0",
    "numpy>=1.21.6,<=1.26.4",
    "pyparsing>=3.2.1",
    "python-dotenv>=1.0.1",
    "setuptools>=64",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.9.10",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
